--- a/sendNavigation/sendNavigation/Base.lproj/Main.storyboard
+++ b/sendNavigation/sendNavigation/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                     <segue destination="XCs-ht-Tm6" kind="show" identifier="toEditScreen" id="clP-4p-SLM"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="send segue" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hhm-eu-j09">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="print for segue or xib" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hhm-eu-j09">
                                 <rect key="frame" x="100" y="249" width="190" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
